[package]
name = "micro-serv"
version = "0.1.0"
authors = ["Guilherme Cintra (gcintra2) <cinguilherme@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.6"
slab = "0.4.2"
futures = "0.3.5"
regex = "1.3.9"
lazy_static = "1.4.0"
